--- a/style.css
+++ b/style.css
@@ -79,8 +79,24 @@ var(--roboto-mono);
     width: 50%;
     margin: 0 auto;
 }
- 
-@media screen and (min-width: 768px) {   
+
+
+
+.paremtro-senha-botoes{
+    display:flex;
+    justify-content:center;
+}
+
+
+.parametro-senha_botao{
+    padding:24px
+    border-top:2px solid var(--borda);
+    border-bottom:2px solid var(--borda)
+    margin:0;
+    font-size:24px;
+
+}   
+ @media screen and (min-width: 768px) {   
  .parametro-coluna__senha{       
 flex-direction: row;
     }
