--- a/style.css
+++ b/style.css
@@ -95,7 +95,32 @@ var(--roboto-mono);
     margin:0;
     font-size:24px;
 
-}   
+.barra {
+    backgroud-color:var(--fundo-senha);
+    height: 30px;
+    width: 100px;
+}
+.forca{
+    height: 30px;
+    position: relative;
+    bottom:30px;   
+}
+.fraca{
+    width:25%
+    background-color: #E71B32;
+}
+.media{
+    background-color: #FAF408;
+    width: 50%;
+}
+.forte{
+    background-color: #00ff85;
+    width: 100%;
+}
+.parametro-senha-textos{
+    display: flex;
+    justify-content: space-between;
+}
  @media screen and (min-width: 768px) {   
  .parametro-coluna__senha{       
 flex-direction: row;
